// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TentativeButton when not tentative renders as expected 1`] = `
<WithStyles(ForwardRef(IconButton))
  aria-label="Tentative"
  onClick={[Function]}
>
  <Memo(ForwardRef(HelpOutlineOutlinedIcon))
    className="test"
  />
</WithStyles(ForwardRef(IconButton))>
`;

exports[`TentativeButton when tentative renders as expected 1`] = `
<WithStyles(ForwardRef(IconButton))
  aria-label="Tentative"
  onClick={[Function]}
>
  <Memo(ForwardRef(HelpTwoToneIcon))
    className="test"
    color="primary"
  />
</WithStyles(ForwardRef(IconButton))>
`;
